--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,9 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    
+    <script src="jquery-2.1.3.min.js"></script>
+    <script src="popup.js"></script>
+
   </head>
   <body>
   <form>
@@ -38,7 +40,6 @@
   <p id="f">f</p>
   <p id="b">b</p>
     
-    <script src="popup.js"></script>
   </body>
 </html>
 
