now stores multiple flashcards

--- a/popup.html
+++ b/popup.html
@@ -33,12 +33,13 @@
   </head>
   <body>
   <form>
-    Front of Flash Card: <input type="text" id="front"><br>
-    Back of Flash Card: <input type="text" id="back"><br>
-  <input id="button1" type="submit" value="Submit">
+    Front of Flash Card: <input type="text" id="fronttext"><br>
+    Back of Flash Card: <input type="text" id="backtext"><br>
+  <input id="createfc_button" type="submit" value="Submit">
   </form>
-  <p id="f">f</p>
-  <p id="b">b</p>
+  <p id="f"></p>
+  <br>
+  <p id="b"></p>
     
   </body>
 </html>
