Added Study button

--- a/popup.html
+++ b/popup.html
@@ -35,12 +35,12 @@
   <form>
     Front of Flash Card: <input type="text" id="fronttext"><br>
     Back of Flash Card: <input type="text" id="backtext"><br>
-  <input id="createfc_button" type="submit" value="Submit">
+  <input id="createfc_button" type="Submit" value="Submit">
+  <input id="studyMode_button" type="Submit" value="Study!">
   </form>
   <p id="f"></p>
   <br>
   <p id="b"></p>
-    
   </body>
 </html>
 
