Added manage your flashcard functionality

--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,7 @@
     Back of Flash Card: <input type="text" id="backtext"><br>
   <input id="createfc_button" type="Submit" value="Submit">
   <input id="studyMode_button" type="Submit" value="Study!">
+  <button id="manage_button">Manage Flash Cards</button>
   </form>
   <p id="f"></p>
   <br>
