--- a/Manage_Flash_Cards.html
+++ b/Manage_Flash_Cards.html
@@ -7,6 +7,7 @@
 
   </head>
   <body>
+
   	<table id="myTable">
   		<tbody>
   		<tr>
@@ -17,6 +18,6 @@
   		</tr>
   	</tbody>
   	</table>
-  	
+  	<button id="clear_button">Clear All Data</button>
   </body>
 </html>
