adding images/html/css

--- a/New_Tab.html
+++ b/New_Tab.html
@@ -10,5 +10,16 @@
   </head>
   <body>
   <script src="New_Tab.js"></script>
+   <link rel="stylesheet" type="text/css" href="new_tab.css">
+   <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+
+   <h1> Study Flash Cards </h1>
+ <!--  <div class=".flipcard"></div -->>
+
+  <div class="flip-card">
+  <div class="flip-front"> Front </div>
+  <input type="text" onkeyup="myFunction()">
+  <div class="flip-back"> Back </div>
+</div>
   </body>
 </html>
