--- a/New_Tab.html
+++ b/New_Tab.html
@@ -3,10 +3,13 @@
  This page is shown when the extension button is clicked, because the
  "browser_action" field in manifest.json contains the "default_popup" key with
  value "popup.html".
+ <link rel="stylesheet" type="text/css" href="Background.css">
+ 
  -->
 <html>
   <head>
     <title>New Tab!</title>
+ 	<script src="jquery-2.1.3.min.js"></script> 
   </head>
   <body>
   <script src="New_Tab.js"></script>
@@ -21,5 +24,9 @@
   <input type="text" onkeyup="myFunction()">
   <div class="flip-back"> Back </div>
 </div>
+  	<p id="f2"></p>
+  	<br>
+  	<p id="b2"></p>
+  
   </body>
 </html>
