Minimally Viable Product

--- a/New_Tab.html
+++ b/New_Tab.html
@@ -9,24 +9,27 @@
 <html>
   <head>
     <title>New Tab!</title>
- 	<script src="jquery-2.1.3.min.js"></script> 
+ 	
   </head>
   <body>
-  <script src="New_Tab.js"></script>
-   <link rel="stylesheet" type="text/css" href="new_tab.css">
-   <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+  	<script src="jquery-2.1.3.min.js"></script> 
+  	<script src="New_Tab.js"></script>
+   	<link rel="stylesheet" type="text/css" href="New_Tab.css">
+   	<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 
    <h1> Study Flash Cards </h1>
- <!--  <div class=".flipcard"></div -->>
+ <!--  <div class=".flipcard"></div -->
 
-  <div class="flip-card">
-  <div class="flip-front"> Front </div>
-  <input type="text" onkeyup="myFunction()">
-  <div class="flip-back"> Back </div>
-</div>
-  	<p id="f2"></p>
+  <div id="flip-card">
+   
+  </div>
+   <div id="f2"></div>
+  <div class="arrow-up"></div>
+<div class="arrow-down"></div>
+<div class="arrow-left"></div>
+<div class="arrow-right"></div>
   	<br>
-  	<p id="b2"></p>
-  
+  	<div id="b2"></div>
+
   </body>
 </html>
