--- a/popup.html
+++ b/popup.html
@@ -27,12 +27,13 @@
       
   <input id="createfc_button" type="Submit" value="Submit" class="submit" a href="#">
   <input id="studyMode_button" type="Submit" value="Study!" class="study" a href="#">
-  <button id="manage_button">Manage Flash Cards</button>
+  <p>
+  <button id="manage_button" type="Submit" value="Manage Flash Cards" class="manage" a href="#">Manage Flash Cards </button>
+  </p>
+  <br>
 
   </form>
-  <p id="f"></p>
-  <br>
-  <p id="b"></p>
+
   </body>
 </html>
 
