added required, character limit to textinput fields

--- a/popup.html
+++ b/popup.html
@@ -21,8 +21,8 @@
 
     <font size="4">
       <h1> Study Cards </h1>
- <!--    Front of Flash Card: --> <br> <input type="text" id="fronttext" class="text" placeholder="Front:" ><p> 
-    <!-- Back of Flash Card: --> <br><input type="text" id="backtext" class="text" placeholder="Back: "><br>
+ <!--    Front of Flash Card: --> <br> <input type="text" id="fronttext" class="text" placeholder="Front:" maxlength="500" required><p> 
+    <!-- Back of Flash Card: --> <br><input type="text" id="backtext" class="text" placeholder="Back: " maxlength="500" required><br>
     <p>
       
   <input id="createfc_button" type="Submit" value="Submit" class="submit" a href="#">
