--- a/Manage_Flash_Cards.html
+++ b/Manage_Flash_Cards.html
@@ -7,8 +7,7 @@
 
   </head>
   <body>
-
-  	<table id="myTable">
+  	<table id="myTable" style="margin:auto">
   		<tbody>
   		<tr>
   			<td style="font-size: 18pt">Front</td>
@@ -18,6 +17,6 @@
   		</tr>
   	</tbody>
   	</table>
-  	<button id="clear_button">Clear All Data</button>
+  	<button id="clear_button" style="float: right">Clear All Data</button>
   </body>
 </html>
