--- a/New_Tab.html
+++ b/New_Tab.html
@@ -13,6 +13,7 @@
   </head>
   <body>
   	<script src="jquery-2.1.3.min.js"></script> 
+    <script src="jquery.fittext.js"></script>
   	<script src="New_Tab.js"></script>
    	<link rel="stylesheet" type="text/css" href="New_Tab.css">
    	<link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
@@ -20,16 +21,14 @@
    <h1> Study Flash Cards </h1>
  <!--  <div class=".flipcard"></div -->
 
-  <div id="flip-card">
-   
-  </div>
-   <div id="f2"></div>
+<div id="flip-card">
+  <div id="f2"></div>
+  <div id="b2"></div>
   <div class="arrow-up"></div>
-<div class="arrow-down"></div>
-<div class="arrow-left"></div>
-<div class="arrow-right"></div>
-  	<br>
-  	<div id="b2"></div>
+  <div class="arrow-down"></div>
+  <div class="arrow-left"></div>
+  <div class="arrow-right"></div>
+</div>
 
   </body>
 </html>
