--- a/Manage_Flash_Cards.html
+++ b/Manage_Flash_Cards.html
@@ -4,19 +4,25 @@
     <title>New Tab!</title>
     <script src="jquery-2.1.3.min.js"></script>
     <script src="manage.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="Manage_Flash_Cards.css">
+    <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
   </head>
   <body>
-  	<table id="myTable" style="margin:auto">
+    <center>
+  
+  	<table id="myTable" class="button">
   		<tbody>
   		<tr>
+
   			<td style="font-size: 18pt">Front</td>
-  			<td style="font-size: 18pt">Back</td>
-  			<td style="font-size: 18pt">Edit</td>
+  			<td style="font-size: 18pt" >Back</td>
+  			<td style="font-size: 18pt" >Edit</td>
   			<td style="font-size: 18pt">Delete</td>
   		</tr>
   	</tbody>
-  	</table>
-  	<button id="clear_button" style="float: right">Clear All Data</button>
+  	</table> 
+    <br>
+  	<button id="button" class="button">Clear All Data</button>
   </body>
+</center>
 </html>
