--- a/New_Tab.html
+++ b/New_Tab.html
@@ -21,12 +21,10 @@
  <!--  <div class=".flipcard"></div -->
 
 <div id="flip-card">
-  <div id="f2"></div>
   <div id="b2"></div>
-  <div class="arrow-up"></div>
-  <div class="arrow-down"></div>
-  <div class="arrow-left"></div>
-  <div class="arrow-right"></div>
+  <div id="f2"></div>
+</div>
+  
 </div>
 
   </body>
