--- a/Manage_Flash_Cards.html
+++ b/Manage_Flash_Cards.html
@@ -22,7 +22,7 @@
   	</tbody>
   	</table> 
     <br>
-  	<button id="button" class="button">Clear All Data</button>
+  	<button id="clear_button" class="button">Clear All Data</button>
   </body>
 </center>
 </html>
