changed icons for edit and delete in manage

--- a/Manage_Flash_Cards.html
+++ b/Manage_Flash_Cards.html
@@ -5,6 +5,7 @@
     <script src="jquery-2.1.3.min.js"></script>
     <script src="manage.js"></script>
     <link rel="stylesheet" type="text/css" href="Manage_Flash_Cards.css">
+    <link rel="stylesheet" type="text/css" href="font-awesome-4.3.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -15,9 +16,9 @@
   		<tr>
 
   			<td style="font-size: 18pt">Front</td>
-  			<td style="font-size: 18pt" >Back</td>
-  			<td style="font-size: 18pt" >Edit</td>
-  			<td style="font-size: 18pt">Delete</td>
+  			<td style="font-size: 18pt">Back</td>
+  			<td style="font-size: 18pt"><i class="fa fa-pencil"></i></td>
+  			<td style="font-size: 18pt"><i class="fa fa-trash-o"></i></td>
   		</tr>
   	</tbody>
   	</table> 
