--- a/Manage_Flash_Cards.html
+++ b/Manage_Flash_Cards.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>New Tab!</title>
+    <title>Manage Flash Cards</title>
     <script src="jquery-2.1.3.min.js"></script>
     <script src="manage.js"></script>
     <link rel="stylesheet" type="text/css" href="Manage_Flash_Cards.css">
